Issue #1274: Upgrade to Docusaurus v3
* Upgrade MDX to be compliant with v3
* Checked with npx docusaurus-mdx-checker as in migration guide https://docusaurus.io/blog/preparing-your-site-for-docusaurus-v3
* Add .nvmrc and README notes to ensure we have a good node version for Docusaurus 3
* Upgrade to React 18.2.0
* Update ChatGPT feature to be #ask
* Fix bulleted list in MDX

--- a/site/docs/ssi/api_guide.mdx
+++ b/site/docs/ssi/api_guide.mdx
@@ -5,6 +5,6 @@ title: API Reference
 
 import {Redirect} from '@docusaurus/router';
 
-const Home = () => {
+const Home = () => \{
   return <Redirect to="/docs/apis/ssi-service" />;
 };
