--- a/site/docs/tbdex/issuer/vc-issuance.mdx
+++ b/site/docs/tbdex/issuer/vc-issuance.mdx
@@ -23,21 +23,15 @@ If you need to create a Credential Issuance app from scratch, continue on with t
 
 <LanguageSwitchBlock>
   <div language="Kotlin">
-    <p>
-- Create a web server using <a href="https://www.jetbrains.com/help/idea/ktor.html#run_ktor_app">Ktor</a> that will serve as an API endpoint.
-    </p>
+    * Create a web server using <a href="https://www.jetbrains.com/help/idea/ktor.html#run_ktor_app">Ktor</a> that will serve as an API endpoint.
   </div>
-
   <div language="JavaScript">
-    <p>
-- Create a web server using <a href="https://expressjs.com/">Express</a> that will serve as an API endpoint.
-    </p>
+    * Create a web server using <a href="https://expressjs.com/">Express</a> that will serve as an API endpoint.
   </div>
 </LanguageSwitchBlock>
-
-- Design the credential you'd like to offer.
-- Implement an issuance path where you'll accept a request for issuance, perform any necessary checks, and issue the credential.
-- Return the credential to the requester.
+* Design the credential you'd like to offer.
+* Implement an issuance path where you'll accept a request for issuance, perform any necessary checks, and issue the credential.
+* Return the credential to the requester.
 
 ## Environment Setup
 
@@ -259,13 +253,13 @@ Refer to the [Create A DID](/docs/web5/build/decentralized-identifiers/how-to-cr
 <LanguageSwitchBlock>
   <div language="Kotlin">
     <p>
-In order to run this code, create a <code>checkSanctionsLists()</code> function and a <code>sanctionsListResult</code> class in your <code>Application.kt</code> file:   
+In order to run this code, create a <code>checkSanctionsLists()</code> function and a <code>sanctionsListResult</code> class in your <code>Application.kt</code> file:
    </p>
   </div>
 
   <div language="JavaScript">
     <p>
-In order to run this code, create a <code>checkSanctionsLists()</code> function in your <code>api.js</code> file:    
+In order to run this code, create a <code>checkSanctionsLists()</code> function in your <code>api.js</code> file:
     </p>
   </div>
 </LanguageSwitchBlock>
