--- a/site/docs/web5/troubleshooting/next.mdx
+++ b/site/docs/web5/troubleshooting/next.mdx
@@ -33,7 +33,8 @@ import { Web5 } from "@web5/api";
 
 If you encounter errors related to `node:crypto`, follow the steps below to resolve them.
 
-<details><summary>Example Error: Node:crypto not handled by plugin</summary>
+<details>
+<summary>Example Error: Node:crypto not handled by plugin</summary>
 Module build failed: UnhandledSchemeError: Reading from "node:crypto" is not handled by plugins (Unhandled scheme).
 Webpack supports "data:" and "file:" URIs by default.
 You may need an additional plugin to handle "node:" URIs.
