--- a/site/src/content/open-source/heading.mdx
+++ b/site/src/content/open-source/heading.mdx
@@ -9,8 +9,9 @@
 </p>
 
 <p className="text-primary-yellow text-[18px] mt-6 mb-6">
-  Our work is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0"
-  >Apache License 2.0</a>, and we welcome you to join
+  Our work is licensed under the
+  <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>
+  , and we welcome you to join
   us in building the future of finance and{' '}
   <TooltipWrapper trigger="decentralized">
     a network that is not controlled by a central entity
