--- a/site/docs/web5/troubleshooting/common-errors.mdx
+++ b/site/docs/web5/troubleshooting/common-errors.mdx
@@ -80,7 +80,7 @@ await web5.dwn.records.create({
 
 This is a syntax error in the calling functon that causes the error. Check this function for any typos or missing attributes.
 
-## Error: connect() failed due to unexpected state: ${storedIdentities} stored identities
+## Error: connect() failed due to unexpected state: $\{storedIdentities} stored identities
 
 This error happens when you try to connect to the Web5 SDK, but there are multiple stored identities in the application's data store, which causes a conflict during the connection process.
 
