move to new Shnip format

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -4,15 +4,6 @@ hide_title: true
 sidebar_position: 7
 ---
 
-import pfiQuotesWriteJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesWriteJs.snippet.js'
-import pfiCreateOfferingKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiCreateOfferingKt.snippet.kt'
-import pfiQuotesProcessJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesProcessJs.snippet.js'
-import pfiRfqVerifyOfferingRequirementsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiRfqVerifyOfferingRequirementsKt.snippet.kt'
-import pfiQuotesSendJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSendJs.snippet.js'
-import pfiCreateQuoteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiCreateQuoteKt.snippet.kt'
-import pfiQuotesSignJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiQuotesSignJs.snippet.js'
-import pfiSignQuoteKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiSignQuoteKt.snippet.kt'
-
 <LanguageSwitcher languages="JavaScript, Kotlin"/>
 
 # Creating Quotes
@@ -35,8 +26,8 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesWriteJs, language: 'JavaScript'},
-    { snippetContent: pfiCreateOfferingKt, language: 'Kotlin'}
+    { snippetName: 'pfiQuotesWriteJs', language: 'JavaScript'},
+    { snippetName: 'pfiCreateOfferingKt', language: 'Kotlin'}
   ]} />
 
 ## Verifying the Required Claims
@@ -47,8 +38,8 @@ The `RFQ` class offers the [verifyOfferingRequirements](https://tbd54566975.gith
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesProcessJs, language: 'JavaScript'},
-    { snippetContent: pfiRfqVerifyOfferingRequirementsKt, language: 'Kotlin'}
+    { snippetName: 'pfiQuotesProcessJs', language: 'JavaScript'},
+    { snippetName: 'pfiRfqVerifyOfferingRequirementsKt', language: 'Kotlin'}
   ]} />
 
 ## Creating and Sending a Quote
@@ -58,16 +49,16 @@ With that in mind, you can then create your quote using the `Quote.create()` met
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesSendJs, language: 'JavaScript'},
-    { snippetContent: pfiCreateQuoteKt, language: 'Kotlin'}
+    { snippetName: 'pfiQuotesSendJs', language: 'JavaScript'},
+    { snippetName: 'pfiCreateQuoteKt', language: 'Kotlin'}
   ]} />
 
 With the `Quote` created, you’ll then sign it for authorization purposes and write it to your own database:
 
 <Shnip snippets={
   [
-    { snippetContent: pfiQuotesSignJs, language: 'JavaScript'},
-    { snippetContent: pfiSignQuoteKt, language: 'Kotlin'}
+    { snippetName: 'pfiQuotesSignJs', language: 'JavaScript'},
+    { snippetName: 'pfiSignQuoteKt', language: 'Kotlin'}
   ]} />
 
 :::note
