adding snip support for bash

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -24,7 +24,7 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
 ## Install SDKs
 
 <Shnip snippets={[
-  { snippetContent: pfiSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
+  { snippetName: 'pfiSdkInstallJs', language: 'JavaScript', codeLanguage: 'bash'},
   {
     language: 'Kotlin',
     nestedSnippets: {
