PFI/Quotes Kotlin Tests (#1272)
* Set up tests that pass

* Update snippet names

* changing snippet name

* Address comments by adding separate providers

* Add missing type switch

* Fix build

* move to new Shnip format

* renaming file and tidying code

* Address final comment

* address final comment

---------

Co-authored-by: angiejones <jones.angie@gmail.com>

--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -27,7 +27,7 @@ Building on the example from the [Exchange API Provider section](/docs/tbdex/pfi
 <Shnip snippets={
   [
     { snippetName: 'pfiCreateOfferingJs', language: 'JavaScript'},
-    { snippetName: 'pfiQuotesWriteKt', language: 'Kotlin'}
+    { snippetName: 'pfiCreateOfferingKt', language: 'Kotlin'}
   ]} />
 
 ## Verifying the Required Claims
@@ -39,7 +39,7 @@ The `RFQ` class offers the [verifyOfferingRequirements](https://tbd54566975.gith
 <Shnip snippets={
   [
     { snippetName: 'pfiRfqVerifyOfferingRequirementsJs', language: 'JavaScript'},
-    { snippetName: 'pfiQuotesProcessKt', language: 'Kotlin'}
+    { snippetName: 'pfiRfqVerifyOfferingRequirementsKt', language: 'Kotlin'}
   ]} />
 
 ## Creating and Sending a Quote
@@ -50,7 +50,7 @@ With that in mind, you can then create your quote using the `Quote.create()` met
 <Shnip snippets={
   [
     { snippetName: 'pfiCreateQuoteJs', language: 'JavaScript'},
-    { snippetName: 'pfiQuotesSendKt', language: 'Kotlin'}
+    { snippetName: 'pfiCreateQuoteKt', language: 'Kotlin'}
   ]} />
 
 With the `Quote` created, you’ll then sign it for authorization purposes and write it to your own database:
@@ -58,7 +58,7 @@ With the `Quote` created, you’ll then sign it for authorization purposes and w
 <Shnip snippets={
   [
     { snippetName: 'pfiSignQuoteJs', language: 'JavaScript'},
-    { snippetName: 'pfiQuotesSignKt', language: 'Kotlin'}
+    { snippetName: 'pfiSignQuoteKt', language: 'Kotlin'}
   ]} />
 
 :::note
