adding shnip support for bash, gradle, and maven (#1287)
* adding snip support for bash

* unnecessary import

* not sure how to do gradle yet

* gradle and xml support

* syntax highting

* removing gradle and xml imports

* missing create did

* json syntax highlighting

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -4,9 +4,6 @@ title: Required SDKs
 hide_title: true
 ---
 
-import pfiSdkInstallJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiSdkInstallJs.snippet.bash'
-import pfiSdkInstallGradle from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiSdkInstallGradle.snippet.gradle'
-import pfiSdkInstallPom from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiSdkInstallPom.snippet.xml'
 import importJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiSdkImportJs.snippet.js'
 
 <LanguageSwitcher languages="JavaScript, Kotlin" />
@@ -24,16 +21,16 @@ To implement and operate as a PFI, you’ll need to use the following SDKs:
 ## Install SDKs
 
 <Shnip snippets={[
-  { snippetContent: pfiSdkInstallJs, language: 'JavaScript', codeLanguage: 'bash'},
+  { snippetName: 'pfiSdkInstallJs', language: 'JavaScript', codeLanguage: 'bash'},
   {
     language: 'Kotlin',
     nestedSnippets: {
       'Gradle': {
-        "snippet": pfiSdkInstallGradle,
+        "snippetName": 'pfiSdkInstallGradle',
         "language": 'js'
       },
       'Maven': {
-        "snippet": pfiSdkInstallPom,
+        "snippetName": 'pfiSdkInstallPom',
         "language": 'xml'
       }
     }
