Swift snippet for AllowList

--- a/site/docs/tbdex/wallet/allowlist-pfis.mdx
+++ b/site/docs/tbdex/wallet/allowlist-pfis.mdx
@@ -4,7 +4,7 @@ hide_title: true
 sidebar_position: 4
 ---
 
-<LanguageSwitcher languages="JavaScript, Kotlin" />
+<LanguageSwitcher languages="JavaScript, Kotlin, Swift" />
 
 # Allowlisting PFIs
 
@@ -26,6 +26,7 @@ To determine if a PFI is part of the tbDEX network, you can check their [DID doc
   snippets={[
     { snippetName: 'isPFIJs', language: 'JavaScript' },
     { snippetName: 'isPFIKt', language: 'Kotlin' },
+    { snippetName: 'isPFISwift', language: 'Swift' }
   ]}
 />
 
