--- a/site/src/content/home/our-philosophy.mdx
+++ b/site/src/content/home/our-philosophy.mdx
@@ -2,4 +2,4 @@
 hide_table_of_contents: true
 ---
 
-We’re building open protocols, standards, and development communities. Our projects are open source because we want everyone in the economy to benefit: individuals, businesses, institutions, and government. Read our open source philosophy.
+We’re building open protocols, standards, and libraries. Our projects are open source because we want everyone in the economy to benefit: individuals, businesses, institutions, and government. 
