--- a/site/src/content/home/our-projects.mdx
+++ b/site/src/content/home/our-projects.mdx
@@ -4,4 +4,4 @@ hide_table_of_contents: true
 
 import TooltipWrapper from '@site/src/components/TooltipWrapper';
 
-Our projects are the building blocks for tbDEX, <TooltipWrapper trigger="self-sovereign identity">an approach that gives individuals ownership and control of their digital identities</TooltipWrapper>, decentralized communication, and more.
+Our projects provide <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper>, verifiable credentials, and decentralized communication: the building blocks for tbDEX.
