--- a/site/src/content/home/our-protocol.mdx
+++ b/site/src/content/home/our-protocol.mdx
@@ -2,4 +2,4 @@
 hide_table_of_contents: true
 ---
 
-The tbDEX protocol is our first system. The protocol pulls together three ingredients: the potential of the internet to democratize information; the power of internet-native currency like bitcoin; and <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper>. It’s how people around the world share information, establish identity and trust, and transact directly.
+The tbDEX protocol is our first system. It facilitates cross-border transactions between parties by enhancing trust and ensuring regulatory compliance, effectively managing inherent risks.
