--- a/site/src/content/home/heading.mdx
+++ b/site/src/content/home/heading.mdx
@@ -2,4 +2,4 @@
 hide_table_of_contents: true
 ---
 
-## We’re building the next generation of the <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> web – returning data back to users. You’re welcome to join.
+## We’re building the next generation of <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> protocols. You’re welcome to join.
