just fixing a few outdated snippets

--- a/site/docs/tbdex/pfi/onboarding.mdx
+++ b/site/docs/tbdex/pfi/onboarding.mdx
@@ -19,13 +19,8 @@ To create a DID and identify yourself as a PFI, use the `web5/dids` package:
 
 <Shnip snippets={
   [
+    { snippetName: 'pfiOnboardingImportsJs', language: 'JavaScript'},
     { snippetName: 'pfiOnboardingImportsKt', language: 'Kotlin'}
-  ]} inlineSnippets={[
-    {
-      code: `import { DidDhtMethod } from '@web5/dids';`,
-      language: "JavaScript",
-      codeLanguage: 'js'
-    }
   ]} />
 
 ### Create DID with Service Endpoint
