--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -78,7 +78,7 @@ Use `TbdexHttpClient` to send the RFQ to the PFI, with an optional `replyTo` pro
 />
 
 :::tip Callback
-Callbacks are fully qualified URIs (DID or URL) that can be provided to the PFI via the `replyTo` property on the RFQ message.
+Callbacks are fully qualified URIs (DID or URL) that can be provided to the PFI via the `replyTo` property.
 
 If `replyTo` is provided, the PFI will send all new messages of the exchange to the supplied URI. 
 This URI is scoped to each exchange, allowing you to specify a different URI per exchange if desired. 
