swift code snippets for receive quotes

--- a/site/docs/tbdex/wallet/receive-quote.mdx
+++ b/site/docs/tbdex/wallet/receive-quote.mdx
@@ -4,7 +4,7 @@ hide_title: true
 sidebar_position: 8
 ---
 
-<LanguageSwitcher languages="JavaScript, Kotlin" />
+<LanguageSwitcher languages="JavaScript, Kotlin, Swift" />
 
 # Receiving Quotes
 
@@ -19,6 +19,7 @@ If you did not provide a [callback URI](/docs/tbdex/wallet/send-rfq#send-rfq-to-
   snippets={[
     { snippetName: 'pollforQuoteJS', language: 'JavaScript' },
     { snippetName: 'pollforQuoteKt', language: 'Kotlin' },
+    { snippetName: 'pollForQuoteSwift', language: 'Swift' },
   ]}
 />
 
@@ -65,6 +66,7 @@ To terminate the exchange, create a `Close` message, sign it with the customer's
   snippets={[
     { snippetName: 'cancelExchangeJS', language: 'JavaScript' },
     { snippetName: 'cancelExchangeKt', language: 'Kotlin' },
+    { snippetName: 'cancelExchangeSwift', language: 'Swift' },
   ]}
 />
 
